--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -33,13 +33,6 @@
         {% if data.posts.has_previous %}
         <li class="page-item">
             <span class="page-link has-icon">
-                <a href="?page=1">
-                    <i class="material-icons">&laquo&laquo</i> First
-                </a>
-            </span>
-        </li>
-        <li class="page-item">
-            <span class="page-link has-icon">
                 <a href="?page={{data.posts.previous_page_number}}">
                     <i class="material-icons">&laquo</i>
                 </a>
@@ -48,21 +41,48 @@
         {% else %}
         <li class="page-item disabled">
             <span class="page-link has-icon">
-                &laquo&laquo First
-            </span>
-        </li>
-        <li class="page-item disabled">
-            <span class="page-link has-icon">
                 <i class="material-icons">&laquo</i>
             </span>
         </li>
         {% endif %}
 
+        {% for page in data.page_range %}
+        {% if page == data.posts.number %}
         <li class="page-item active">
             <span class="page-link">
-                Page {{data.posts.number}} of {{data.posts.paginator.num_pages}}
+                <a href="?page={{page}}" class="text-white">
+                    {{page}}
+                </a>
             </span>
         </li>
+        {% elif page == data.posts.paginator.ELLIPSIS %}
+        {% if forloop.counter < 5 %}
+        <li class="page-item">
+            <span class="page-link">
+                <a href="?page={{data.posts.number|add:'-4'}}">
+                    {{page}}
+                </a>
+            </span>
+        </li>
+        {% else %}
+        <li class="page-item">
+            <span class="page-link">
+                <a href="?page={{data.posts.number|add:'4'}}">
+                    {{page}}
+                </a>
+            </span>
+        </li>
+        {% endif %}
+        {% else %}
+        <li class="page-item">
+            <span class="page-link">
+                <a href="?page={{page}}">
+                    {{page}}
+                </a>
+            </span>
+        </li>
+        {% endif %}
+        {% endfor %}
 
         {% if data.posts.has_next %}
         <li class="page-item">
@@ -71,20 +91,10 @@
                 </a>
             </span>
         </li>
-        <li class="page-item">
-            <span class="page-link has-icon">
-                <a href="?page={{data.posts.paginator.num_pages}}">Last <i class="material-icons">&raquo&raquo</i></a>
-            </span>
-        </li>
         {% else %}
         <li class="page-item disabled">
             <span class="page-link has-icon">
                 <i class="material-icons">&raquo</i>
-            </span>
-        </li>
-        <li class="page-item disabled">
-            <span class="page-link has-icon">
-                Last <i class="material-icons">&raquo&raquo</i>
             </span>
         </li>
         {% endif %}
